# glwrapper

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
include/: glwrapper.hpp
include/glwrapper/: attribute.hpp  buffer.hpp  config.hpp  error.hpp  glm_types.hpp  profile.hpp  program.hpp  program_util.hpp  shader.hpp  shader_util.hpp  shader_utils.hpp  string_view.hpp  system_gl.hpp  texture.hpp  uniform.hpp  vertex_array.hpp
include/glwrapper/detail/: resource.hpp  string_view.hpp
include/stx/: string_view.hpp
test/: buffer.cpp  context.hpp  error.cpp  program.cpp  shader.cpp  vertex_array.cpp
